...
    );
  }

  const u = university.data;

  return (
    <Screen scroll testID="student-university-detail-screen">
      <Text variant="heading">{u.name}</Text>

      <SaveUniversityButton universityId={u.id} />

      {u.website ? (
        <Button
...
